feat(storage): Integrando o Amazon S3 para armazenamento de arquivos e atualizando as configurações.